--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,17 @@
-CC = clang++
-BLOODWORD = BloodSword.cpp
-BLOODWORD_OUTPUT = BloodSword.exe
-LINKER_FLAGS = -lSDL2 -lSDL2_image -lSDL2_ttf -lSDL2_mixer -O3 -std=c++17 -lstdc++fs
-INCLUDES = -I/usr/include/SDL2
+CC=clang++
+BLOODWORD=BloodSword.cpp
+BLOODWORD_OUTPUT=BloodSword.exe
+LINKER_FLAGS=-O3 -std=c++17 -lSDL2 -lSDL2_image -lSDL2_ttf -lSDL2_mixer
+INCLUDES=-I/usr/include/SDL2
+
+UNAME_S=$(shell uname -s)
+
+ifeq ($(UNAME_S),Darwin)
+	LINKER_FLAGS += -stdlib=libc++
+	INCLUDES += -I/usr/local/include/SDL2
+else
+	LINKER_FLAGS += -lstdc++fs
+endif
 
 all: clean blood-sword
 
